# my-crewai

./: pyproject.toml
src/my_crewai/: __init__.py  main.py
