[project]
name = "my-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali-Ahmed999", email = "hafizaliahmed2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.108.0",
]

[project.scripts]
my-crewai = "my_crewai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
